--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
