--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-routing": "^0.3.1",
     "bootstrap": "^5.0.0-beta2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
